# AnnKhodakova_qa_guru_homework_17

with_poetry/: pyproject.toml
