[tool.poetry]
name = "with-poetry"
version = "0.1.0"
description = "project with poetry"
authors = ["Ann Khodakova <annkhodakova88@gmail.com>"]
readme = "README.md"
packages = [{include = "with_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0b17"
pytest = "7.2.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

